<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaSeniorFragment">

    <EditText
        android:id="@+id/etBairroAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascimentoAS"
        app:layout_constraintStart_toStartOf="@+id/etNomeAS"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAS" />

    <EditText
        android:id="@+id/etDataNascimentoAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/nasc"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/rgProbCardAS"
        app:layout_constraintStart_toStartOf="@+id/rgProbCardAS"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAS" />

    <EditText
        android:id="@+id/etNomeAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAS"
        app:layout_constraintEnd_toEndOf="@+id/etDataNascimentoAS"
        app:layout_constraintStart_toStartOf="@+id/etDataNascimentoAS"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgProbCardAS"
        android:layout_width="221dp"
        android:layout_height="113dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascimentoAS">

        <RadioButton
            android:id="@+id/rbTemProbCardAS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temProbCard" />

        <RadioButton
            android:id="@+id/rbNaoTemProbCardAS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/naoTemProbCard" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCadastrarAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/tvListaAS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgProbCardAS" />

    <TextView
        android:id="@+id/tvListaAS"
        android:layout_width="350dp"
        android:layout_height="198dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>