<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaOutroFragment">

    <EditText
        android:id="@+id/etNomeAO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAcademiaAO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/acad"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etRecordeAO"
        app:layout_constraintStart_toStartOf="@+id/etDataNascimentoAO"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascimentoAO" />

    <EditText
        android:id="@+id/etRecordeAO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/recorde"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAO"
        app:layout_constraintStart_toStartOf="@+id/etAcademiaAO"
        app:layout_constraintTop_toBottomOf="@+id/etAcademiaAO" />

    <EditText
        android:id="@+id/etDataNascimentoAO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/nasc"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAcademiaAO"
        app:layout_constraintStart_toStartOf="@+id/etBairroAO"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAO" />

    <EditText
        android:id="@+id/etBairroAO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascimentoAO"
        app:layout_constraintStart_toStartOf="@+id/etNomeAO"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAO" />

    <Button
        android:id="@+id/btnCadastrarAO"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="18dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/tvListaAO"
        app:layout_constraintEnd_toEndOf="@+id/etRecordeAO"
        app:layout_constraintTop_toBottomOf="@+id/etRecordeAO" />

    <TextView
        android:id="@+id/tvListaAO"
        android:layout_width="335dp"
        android:layout_height="190dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>