<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ajLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaJuvenilFragment">

    <EditText
        android:id="@+id/etNomeAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="129dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBairroAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascimentoAJ"
        app:layout_constraintStart_toStartOf="@+id/etNomeAJ"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAJ" />

    <EditText
        android:id="@+id/etDataNascimentoAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/nasc"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAnosPraticaAJ"
        app:layout_constraintStart_toStartOf="@+id/etBairroAJ"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAJ" />

    <EditText
        android:id="@+id/etAnosPraticaAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/anosP"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAJ"
        app:layout_constraintStart_toStartOf="@+id/etDataNascimentoAJ"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascimentoAJ" />

    <Button
        android:id="@+id/btnCadastrarAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/tvListaAJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnosPraticaAJ" />

    <TextView
        android:id="@+id/tvListaAJ"
        android:layout_width="347dp"
        android:layout_height="204dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>